<resources>
    <string name="app_name">Project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Messenger</string>
    <string name="title_notifications">Personal Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnSignIn">зарегистрироваться</string>
    <string name="btnSignUp">Войти</string>
    <string name="enterText">Войдите в свою учетную запись или зарегистрируйтесь!</string>
    <string name="scheduler">Scheduler</string>
    <string name="descr">Планировщик событий и персонала</string>
    <string name="btnSignOut">Выйти</string>
</resources>