<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_element"
    android:background="@drawable/image"
    tools:context=".EnterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:textSize="35sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduler"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat"
            android:gravity="center_horizontal"
            android:text="@string/descr"
            android:textAlignment="center"
            android:textColor="#B7FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_above="@id/text_ent_bot"
        android:layout_margin="15dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:text="@string/btnSignUp"
            android:textColor="@color/bot_color"
            app:backgroundTint="#A3673AB7" />

        <Button

            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:text="@string/btnSignIn"
            android:textColor="@color/bot_color"
            app:backgroundTint="#A3673AB7"/>
    </LinearLayout>
    <TextView
        android:id="@+id/text_ent_bot"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:textColor="@color/bot_color"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/enterText"
        />


</RelativeLayout>